data/all_generated_tests/raw_wast_tests/br_IncorrectConditionEvaluation_697.wast
;; 8. **Test Description:**    A `loop` that repeatedly evaluates a `br_if` condition based on a decrementing counter. When the counter reaches zero, the condition should be false, and the loop should continue. Test ensures the loop continues correctly and `br_if` only branches when the condition is true.    - **Constraint:** Validates `br_if` with decremental conditional evaluation within a loop.

(assert_invalid
  (module
    (func (local i32)
      (i32.const 10)
      (local.set 0)
      (loop 
        (local.get 0)
        (br_if 1 (local.get 0))
        (local.get 0)
        (i32.const 1)
        (i32.sub)
        (local.set 0)
        (local.get 0)
        (i32.const 0)
        (i32.eq)
        (br_if 0)
      )
    )
  )
  "type mismatch"
)